# atlas

./: .gitignore  DEPLOYMENT.md  FEATURES.md  FEATURE_ENGINEERING.md  Makefile  README.md  atlas-prompt.md  pyproject.toml
atlas/: __init__.py  annotator.py  evaluate.py  features.py  gateway.py  l1_trust.py  l2_query.py  llm_generator.py  programmatic_generator.py  threshold_sim.py  utils.py
prompts/: clean_consumer.txt  clean_enterprise.txt  persistent_adversary.txt  sleeper.txt
scripts/: run_pipeline.py
